--- a/index.html
+++ b/index.html
@@ -45,5 +45,15 @@
             The tool will instantly show the VAT amount and the final total.<br>  
             Perfect for businesses, freelancers, and anyone needing quick VAT calculations.</p>
     </section>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '85efbbf41350295c0b59aaac7f2b5eab',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/85efbbf41350295c0b59aaac7f2b5eab/invoke.js"></script>
 </body>
 </html>
